--- a/charts/etcd/templates/deployments.yaml.tmpl
+++ b/charts/etcd/templates/deployments.yaml.tmpl
@@ -2,7 +2,7 @@
 {{- $selectorLabels       := include "etcd.selectorLabels" . -}}
 {{- $commonLabels         := include "etcd.labels" . -}}
 {{- $currentNamespace     := .Release.Namespace -}}
-{{- $listETCD             := list "main" -}}
+{{- $listETCD             := list "resources" -}}
 {{- $listReplicaCount     := until ( int ( $.Values.applications.etcd.extraParams.clusterSize.replicaCount)) }}
 
 
@@ -38,7 +38,7 @@ metadata:
   
   labels:
     app.kubernetes.io/instance: "{{- $baseName }}-{{- $instanceContext }}-{{- $instanceNumber }}"
-    app.kubernetes.io/{{- $instanceContext }}: "{{- $baseName }}-{{- $instanceContext }}"
+    app.kubernetes.io/group: "{{- $baseName }}-{{- $instanceContext }}"
     {{- $commonLabels | nindent 4 }}
   {{- with .metadata.labels }}
     {{- toYaml . | nindent 4 }}
@@ -60,7 +60,7 @@ spec:
   selector:
     matchLabels: 
       app.kubernetes.io/instance: "{{- $baseName }}-{{- $instanceContext }}-{{- $instanceNumber }}"
-      app.kubernetes.io/{{- $instanceContext }}: "{{- $baseName }}-{{- $instanceContext }}"
+      app.kubernetes.io/group: "{{- $baseName }}-{{- $instanceContext }}"
       {{- $selectorLabels | nindent 6 }}
 
   template:
@@ -69,7 +69,7 @@ spec:
 
       labels:
         app.kubernetes.io/instance: "{{- $baseName }}-{{- $instanceContext }}-{{- $instanceNumber }}"
-        app.kubernetes.io/{{- $instanceContext }}: "{{- $baseName }}-{{- $instanceContext }}"
+        app.kubernetes.io/group: "{{- $baseName }}-{{- $instanceContext }}"
         {{- $commonLabels | nindent 8 }}
       {{- with .metadata.labels }}
         {{- toYaml . | nindent 8 }}
@@ -99,7 +99,7 @@ spec:
                 topologyKey: {{ .affinity.topologyKey }}
                 labelSelector:
                   matchLabels:
-                    app.kubernetes.io/{{- $instanceContext }}: "{{- $baseName }}-{{- $instanceContext }}"
+                    app.kubernetes.io/group: "{{- $baseName }}-{{- $instanceContext }}"
                     {{- $selectorLabels | nindent 20 }}
 
       automountServiceAccountToken: false
