DK-14 formatting of the "konnectivity" chart

--- a/charts/etcd/templates/certs.yaml.tmpl
+++ b/charts/etcd/templates/certs.yaml.tmpl
@@ -48,14 +48,14 @@ spec:
   duration: {{ .duration }}{{ .measurement }}
   renewBefore: {{ $newRenewBefore }}{{ .measurement }}
 
-  {{- with .subject }}
+
   subject:
     organizations:
       - "{{- $currentNamespace }}"
-      {{- range $organization := .organizations }}
+      {{- range $organization := .subject.organizations }}
       - {{ $organization }}
       {{- end }}
-  {{- end }}
+
 
   {{- with .usages }}
   usages:
