--- a/charts/etcd/templates/deployments.yaml.tmpl
+++ b/charts/etcd/templates/deployments.yaml.tmpl
@@ -50,7 +50,7 @@ metadata:
   {{- end }}
 
 spec:
-  replicas: 1
+  replicas: {{ .replicas }}
 
   {{- with .strategy }}
   strategy:
@@ -109,8 +109,8 @@ spec:
         {{- with .etcd }}
         - name: {{ .name }}
 
+          {{- with .entryPoint.command }}
           command:
-          {{- with .command.path }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
 
@@ -119,7 +119,7 @@ spec:
             - --advertise-client-urls=https://$(SVC_NAME)-{{- $instanceNumber }}:2379
             - --initial-advertise-peer-urls=https://$(SVC_NAME)-{{- $instanceNumber }}:2380
             - --initial-cluster={{- $initialClusterList }}
-          {{- with .command.args }}
+          {{- with .entryPoint.args }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
 
@@ -140,8 +140,8 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
 
-          livenessProbe:
           {{ with .livenessProbe }}
+          livenessProbe:
             {{- toYaml . | nindent 12 }}
           {{- end }}
 
