--- a/charts/etcd/templates/certs.yaml.tmpl
+++ b/charts/etcd/templates/certs.yaml.tmpl
@@ -132,9 +132,11 @@ spec:
     - "{{ $baseName }}-{{- $instanceContext }}" 
     - "{{ $baseName }}-{{- $instanceContext }}.{{- $currentNamespace }}"
     - "{{ $baseName }}-{{- $instanceContext }}.svc"
-    - "{{ $baseName }}-{{- $instanceContext }}-svc-{{- $instanceNumber }}"
-    - "{{ $baseName }}-{{- $instanceContext }}-svc-{{- $instanceNumber }}.{{- $currentNamespace }}"
-    - "{{ $baseName }}-{{- $instanceContext }}-svc-{{- $instanceNumber }}.{{- $currentNamespace }}.svc"
+    {{- range $instanceETCD := $listReplicaCount }}
+    - "{{ $baseName }}-{{- $instanceContext }}-svc-{{- $instanceETCD }}"
+    - "{{ $baseName }}-{{- $instanceContext }}-svc-{{- $instanceETCD }}.{{- $currentNamespace }}"
+    - "{{ $baseName }}-{{- $instanceContext }}-svc-{{- $instanceETCD }}.{{- $currentNamespace }}.svc"
+    {{- end }}
     - "{{ $baseName }}-{{- $instanceContext }}-client"
     - "{{ $baseName }}-{{- $instanceContext }}-client.{{- $currentNamespace }}"
     - "{{ $baseName }}-{{- $instanceContext }}-client.svc"
