меняет формат шаблонов на yaml.tmpl и добавляет чарты kube-scheduler и kube-control-manager

--- a/charts/konnectivity/templates/configMaps.yaml.tmpl
+++ b/charts/konnectivity/templates/configMaps.yaml.tmpl
@@ -25,7 +25,7 @@ data:
     clusters:
     - cluster:
         certificate-authority: /pki/{{ $baseName }}-server-client/ca.crt
-        server: https://kubernetes-apiserver:6443
+        server: https://kube-apiserver-svc:6443
       name: default-cluster
     contexts:
     - context:
